# scheduler

./: .env  CONFIG.md  README.md  docker-compose.yml
database/: Dockerfile  prod.sql
frontend/: Dockerfile  package.json  server.js
frontend/config/: routes.js
frontend/hr/: package-lock.json  package.json
frontend/main/: nuxt.config.js  package-lock.json  package.json
frontend/scheduler/: .eslintrc  .gitignore  package-lock.json  package.json
proxy/: Dockerfile  README.md
proxy/html/: under_maintenance.html
proxy/nginx/: nginx.conf
services/Auth/: Auth.sln  Dockerfile
services/Onboarding/Onboarding.API/: Cargo.toml  Dockerfile  Rocket.toml
services/Onboarding/Onboarding.API/src/: lib.rs  main.rs
services/Onboarding/Onboarding.API/src/core/: mod.rs
services/Onboarding/Onboarding.API/src/core/types/: error.rs  login.rs  mod.rs  token.rs
services/Onboarding/Onboarding.API/src/core/usecases/: insert_login.rs  mod.rs
services/Onboarding/Onboarding.API/src/db/: mod.rs  pool.rs  schema.rs
services/Onboarding/Onboarding.API/src/db/models/: login.rs  mod.rs  token.rs
services/Onboarding/Onboarding.API/src/db/repo/: login.rs  mod.rs  token.rs
services/Onboarding/Onboarding.API/src/http/: api.rs  mod.rs
services/Onboarding/Onboarding.API/src/http/errors/: handlers.rs  io.rs  mod.rs
services/Onboarding/Onboarding.API/src/http/resources/register/: handler.rs  io.rs  mod.rs
services/Onboarding/Onboarding.API/src/settings/: mod.rs
services/Positions/: Dockerfile  Positions.sln
services/Scheduler/: Dockerfile  Scheduler.sln
(+559 files in other folders)
