[package]
name = "onboardingapi"
version = "0.1.0"
edition = "2018"
authors = ["Jack Teys <jack.teys@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_contrib= "0.4.10"
serde = "1.0.130"
serde_json = "1.0.68"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_codegen = { version = "0.16.1", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
thiserror = "1.0"
chrono = "0.4.19"
bcrypt = "0.10.1"
lettre = "0.10.0-rc.3"
rocket_cors = "0.5.2"